<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ButtonCallBack</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="check_call_back">check call back</string>

    <string name="first">first</string>
    <string name="second">"second"</string>
    <string name="third">third</string>
    <string name="fourth">fourth</string>
    <string name="fifth">fifth</string>
    
</resources>
