<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

	<EditText android:hint = "@string/check_call_back"
	    android:id = "@+id/EditText01"
	    android:layout_width = "fill_parent"
	    android:layout_height = "wrap_content"/>

	<Button
	    android:id="@+id/Button01"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/EditText01"
	    android:layout_below="@+id/EditText01"
	    android:layout_marginTop="14dp"
	    android:text="@string/first" />

	<Button
	    android:id="@+id/Button02"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/Button01"
	    android:layout_below="@+id/Button01"
	    android:text="@string/second" />

	<Button
	    android:id="@+id/Button03"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/Button02"
	    android:layout_below="@+id/Button02"
	    android:text="@string/third" />

	<Button
	    android:id="@+id/Button04"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/Button03"
	    android:layout_below="@+id/Button03"
	    android:text="@string/fourth" />

	<Button
	    android:id="@+id/Button05"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/Button04"
	    android:layout_below="@+id/Button04"
	    android:text="@string/fifth" />
	
</RelativeLayout>
